src/test/resources/Parser/SyntaxErrors/DelegateFromStaticField.front
class A:
    delegate * : static t: [float32];